Add save confirmation + extend base template to employees page

--- a/daily/templates/daily/base.html
+++ b/daily/templates/daily/base.html
@@ -8,9 +8,10 @@
       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/bootstrap.min.css' %}"/>
-
       <script type="text/javascript" src="{% static 'daily/util.js' %}"></script>
-      <script type="text/javascript" src="{% static 'daily/daily.js' %}"></script>
+    {% block includes %}
+    {% endblock %}
+     
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/daily.css' %}"/>
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/trash.css' %}"/>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -58,14 +59,6 @@
       </div>
       </nav>
 
-
-      <div class="container">
-
-      <div class="starter-template">
-        <h1 id="date">{{ date }}</h1>
-      </div>
-
-    </div><!-- /.container -->      
 
   {% block content %}
   {% endblock %}
