--- a/daily/templates/daily/employees.html
+++ b/daily/templates/daily/employees.html
@@ -1,59 +1,9 @@
-<!DOCTYPE html>
+{% extends 'daily/base.html' %}
 {% load static %}
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <head>
-      <script type="text/javascript" src="{% static 'daily/jquery.min.js' %}"></script>
-      <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-      <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
-      <link rel="stylesheet" type="text/css" href= "{% static 'daily/bootstrap.min.css' %}"/>
-      <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-      <link href="{% static 'daily/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
-      <!-- Bootstrap theme -->
-      <script src="{% static 'daily/bootstrap.min.js' %}"></script>
- 
-
-      <script type = "text/javascript" src="{% static 'daily/jquery-sortable.js'%}"></script>
-      
-      <script type="text/javascript" src="{% static 'daily/util.js' %}"></script>
-      <script type="text/javascript" src="{% static 'daily/employee.js' %}"></script>
-      <script type="text/javascript" src="{% static 'daily/daily.js' %}"></script>
-      <link rel="stylesheet" type="text/css" href= "{% static 'daily/daily.css' %}"/>
-      <link rel="stylesheet" type="text/css" href= "{% static 'daily/trash.css' %}"/>
-      
-      
-      <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Liverpool Window Cleaning</a>
-          </div>
-          <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="#">Home</a></li>
-              <li><a href="#about">About</a>
-              <li class="active dropdown">
-              <a href="#" class="dropdown-toggle"
-                data-toggle="dropdown" role="button" aria-haspopup="true"
-                aria-expanded="false">Manage <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Employees</a></li>
-                <li><a href="#">Phones</a></li>
-                <li><a href="#">Vehicles</a></li>
-              </ul>
-              </li>
-              </li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-        </nav>
+{% block includes %}
+    <script type="text/javascript" src="{% static 'daily/employee.js' %}"></script>
+{% endblock %}
+{% block content %}
         
         <div id="form-fields">
           <button type="button" class="btn btn-primary btn-lg"
@@ -108,4 +58,6 @@
         
         </div>
 
-    </body>
+      </body>
+
+      {% endblock %}
