Add manage phones page

--- a/daily/templates/daily/base.html
+++ b/daily/templates/daily/base.html
@@ -48,7 +48,7 @@
               aria-expanded="false">Manage <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="employees">Employees</a></li>
-                  <li><a href="#">Phones</a></li>
+                  <li><a href="phones">Phones</a></li>
                   <li><a href="#">Vehicles</a></li>
                 </ul>
                 </li>
