--- a/daily/templates/daily/base.html
+++ b/daily/templates/daily/base.html
@@ -40,7 +40,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="index">Schedule</a></li>
             <li><a href="#about">About</a>
             <li class="dropdown">
             <a href="#" class="dropdown-toggle"
@@ -49,7 +49,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="employees">Employees</a></li>
                   <li><a href="phones">Phones</a></li>
-                  <li><a href="#">Vehicles</a></li>
+                  <li><a href="vehicles">Vehicles</a></li>
                 </ul>
                 </li>
             </li>
