Finish delete/undo + complete for daily schedule

--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -67,7 +67,8 @@
                 </div>
               </td>
               <td>
-                <button type="button" class="btn btn-sm btn-danger delete">Delete</button>
+                <button type="button" class="btn btn-sm btn-danger
+                  delete">delete project</button>
                 <button type="button" class="btn btn-sm btn-info undo">Undo!</button>
               </td>
               {% endfor %}
