--- a/daily/templates/daily/employees.html
+++ b/daily/templates/daily/employees.html
@@ -22,9 +22,10 @@
                 <td> </td>
                 <td>Name</td>
                 <td>Category</td>
+                <td></td>
               </tr>
               {% for emp in employees.all %}
-              <tr class="emp">
+              <tr class="emp" id={{ emp.id }}>
                 <td>{{ emp.id }}</td>
                 <td class="emp-name-td">{{ emp.name }}</td>
                 <td>
@@ -33,6 +34,11 @@
                     <li class="flex-li cat">{{ cat.name }}</li>
                       {% endfor %}
                   </ol>
+                </td>
+                <td>
+                  <button type="button" class="btn btn-sm btn-danger
+                    delete">delete record</button>
+                  <button type="button" class="btn btn-sm btn-info undo">Undo!</button>
                 </td>
               </tr>
               {% endfor %}
