Remove unnecessary trash icon in phones/vehicles.html

--- a/daily/templates/daily/phones.html
+++ b/daily/templates/daily/phones.html
@@ -36,14 +36,14 @@
       {% endfor %}
     </tbody>
   </table>
-  <ol class='trash category_trash'>
+  <!--<ol class='trash category_trash'>
     <li>
     <div class="lid"></div>
     <div class="lidcap"></div>
     <div class="bin"></div>
     </li>
   </ol>
-
+  -->
 </div>
       </body>
 
