--- a/daily/templates/daily/base.html
+++ b/daily/templates/daily/base.html
@@ -40,7 +40,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index">Schedule</a></li>
+            <li><a href="dailySchedule">Schedule</a></li>
             <li class="dropdown">
             <a href="#" class="dropdown-toggle"
               data-toggle="dropdown" role="button" aria-haspopup="true"
