--- a/daily/templates/daily/employees.html
+++ b/daily/templates/daily/employees.html
@@ -37,7 +37,7 @@
                 </td>
                 <td>
                   <button type="button" class="btn btn-sm btn-danger
-                    delete">delete record</button>
+                    delete">delete</button>
                   <button type="button" class="btn btn-sm btn-info undo">Undo!</button>
                 </td>
               </tr>
