--- a/daily/templates/daily/vehicles.html
+++ b/daily/templates/daily/vehicles.html
@@ -29,7 +29,7 @@
         <td class="vehicle-name-td">{{ vehicle.name }}</td>
         <td>
           <button type="button" class="btn btn-sm btn-danger
-            delete">delete record</button>
+            delete">delete</button>
           <button type="button" class="btn btn-sm btn-info undo">Undo!</button>
         </td>
       </tr>
