--- a/daily/templates/daily/base.html
+++ b/daily/templates/daily/base.html
@@ -4,7 +4,7 @@
     <head>
 
       <script type="text/javascript" src="{% static 'daily/jquery.min.js' %}"></script>
-      <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+      <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/bootstrap.min.css' %}"/>
