--- a/daily/templates/daily/employees.html
+++ b/daily/templates/daily/employees.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="h-box">
-          <table class="table table-bordered" id="daily-table">
+          <table class="table table-bordered" id="general-table">
             <tbody>
               <tr>
                 <td> </td>
