--- a/daily/static/daily/daily.css
+++ b/daily/static/daily/daily.css
@@ -27,12 +27,8 @@ h3 {
   max-width: 50px;
 }
 
-#column-flexbox {
-//  flex-direction: column;
-}
-
-#row-flexbox {
- // flex-direction: row;
+.proj-id-td {
+  visibility: hidden;
 }
 .no-border {
   border: 0px;
