More sources layout changes

--- a/daily/static/daily/daily.css
+++ b/daily/static/daily/daily.css
@@ -99,9 +99,9 @@ h3 {
   margin: 0px;
   order: 3;
   position: absolute;
-  left: 90%;
+  left: 85%;
   top: 50px;
-  width: 10px;
+  width: 10%;
   
 }
 
