--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -45,7 +45,7 @@
                 </ol>
               </div>
               </td>
-              <td class="time-td"><span>{{project.time|time:"g:i A"}}<span></td>
+              <td class="time-td"><span>{{project.dtime|time:"g:i A"}}<span></td>
                   <td>
                 <div class="daily-vehicle-list">
                 <ol class='sortable_with_drop vehicle_list'>
