Manage categories + fix getDeletedRows bug

--- a/daily/templates/daily/base.html
+++ b/daily/templates/daily/base.html
@@ -46,6 +46,7 @@
               data-toggle="dropdown" role="button" aria-haspopup="true"
               aria-expanded="false">Manage <span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                  <li><a href="categories">Employee Categories</a></li>
                   <li><a href="employees">Employees</a></li>
                   <li><a href="phones">Phones</a></li>
                   <li><a href="vehicles">Vehicles</a></li>
