--- a/daily/templates/daily/phones.html
+++ b/daily/templates/daily/phones.html
@@ -19,13 +19,13 @@
   <table class="table table-bordered" id="general-table">
     <tbody>
       <tr>
-        <td> </td>
+        <td class="id-td"> </td>
         <td>Number</td>
         <td></td>
       </tr>
       {% for phone in phones.all %}
       <tr class="phone" id={{phone.id}}>
-        <td>{{ phone.id }}</td>
+        <td class="id-td">{{ phone.id }}</td>
         <td class="phone-number-td">{{ phone.number }}</td>
         <td>
           <button type="button" class="btn btn-sm btn-danger
