--- a/daily/templates/daily/base.html
+++ b/daily/templates/daily/base.html
@@ -54,6 +54,48 @@
                 </li>
             </li>
           </ul>
+ <ul class="nav navbar-nav navbar-right">
+{% if not user.is_authenticated %}
+<li class="dropdown">
+   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+   <ul id="login-dp" class="dropdown-menu">
+     <li>
+     <div class="row">
+       <div class="col-md-12">
+      
+      <form method="post" action="{% url 'login' %}" id="login-form" class="form" role="form"  accept-charset="UTF-8" id="login-nav">
+        <div class="form-group">
+      <span class="csrf">{% csrf_token %}</span>
+             <label class="sr-only" for="user-username">Username</label>
+             <input type="text" class="form-control" name="username" id="user-username" placeholder="Username" required>
+           </div>
+           <div class="form-group">
+             <label class="sr-only" for="user-password">Password</label>
+             <input type="password" class="form-control" name="password" id="user-password" placeholder="Password" required>
+             <div class="help-block text-center"><a href="">Forget password?</a></div>
+           </div>
+
+             <button type="submit"  class="btn btn-primary btn-block">Sign in</button>
+
+         </form>
+       </div>
+
+     </div>
+     </li>
+   </ul>
+ </ul>
+ {% else %}
+ <li class="dropdown">
+      <form method="post" action="{% url 'logout' %}" id="logout-form" class="form" role="form"  accept-charset="UTF-8" >
+      <span class="csrf">{% csrf_token %}</span>
+             <button type="submit"  class="btn btn-primary btn-block">Logout</button>
+
+         </form>
+   </li>
+ 
+ {% endif %}
+ 
+ </ul>
         </div><!--/.nav-collapse -->
       </div>
       </nav>
