--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -14,8 +14,9 @@
     <!--<div id="daily-view">-->
       <div id="form-fields">
       {% if user.is_authenticated %}
+      <p> hello {{ user.username }} </p>
       <button type="button" class="btn btn-primary btn-lg" id="new-proj-button" onclick="addProject()">New project</button>
-      <span class="csrf">{% csrf_token %}</span>
+      <!--<span class="csrf">{% csrf_token %}</span>-->
       <button type="button" class="btn btn-primary btn-lg"
         id="save-button" onclick="updateSchedule()">Save Changes</button>
       <input type="hidden" name="schedule" id="schedule"/>
