--- a/daily/templates/daily/base.html
+++ b/daily/templates/daily/base.html
@@ -40,7 +40,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="dailySchedule">Schedule</a></li>
+            <li><a href="dailyschedule">Schedule</a></li>
+            {% if user.is_authenticated %}
             <li class="dropdown">
             <a href="#" class="dropdown-toggle"
               data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -52,14 +53,16 @@
                   <li><a href="vehicles">Vehicles</a></li>
                 </ul>
                 </li>
+                {% endif %}
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if not user.is_authenticated %}
             <li class="dropdown">
-            <a href="#" id="login-dropdown" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+            <a href="#" id="login-dropdown" class="dropdown-toggle" data-toggle="dropdown"><b>Log In</b> <span class="caret"></span></a>
             <ul id="login-dp" class="dropdown-menu">
               <li>
+             <li class="loggedin">False</li>
               <div class="row">
                 <div class="col-md-12">
       
@@ -73,8 +76,8 @@
                       <label class="sr-only" for="user-password">Password</label>
                       <input type="password" class="form-control" name="password" id="user-password" placeholder="Password" required>
                     </div>
-                    
-                    <button type="submit" id="login-btn"  onclick="login()" class="btn btn-primary btn-block">Sign in</button>
+                   <input type="hidden" name="next" value="{{ request.path }}" /> 
+                    <button type="submit" id="login-btn"  class="btn btn-primary btn-block">Sign in</button>
 
                   </form>
                 </div>
@@ -88,6 +91,7 @@
           <form method="post" action="{% url 'logout' %}" id="logout-form" class="form" role="form"  accept-charset="UTF-8" >
       <span class="csrf">{% csrf_token %}</span>
       <div class="form-group">
+          <li class="loggedin">True<li>
         <button type="submit"  class="btn btn-primary btn-block">Logout</button>
       </div>
          </form>
