--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -32,7 +32,9 @@
               <td>Times</td>
               <td>Vehicles</td>
               <td>Phones</td>
+              {% if user.is_authenticated %}
               <td>Done</td>
+              {% endif %}
             </tr>
             {% for project in schedule.all %}
             <tr id={{ project.id }} class ="project">
@@ -66,6 +68,7 @@
                 </ol>
               </div>
               </td>
+              {% if user.is_authenticated %}
               <td>
                 <div class="checkbox">
                   <label class="chk-box">
@@ -73,6 +76,7 @@
                 </label>
               </div>
             </td>
+            {% endif %}
             <!--
               <td>
                 <button type="button" class="btn btn-sm btn-danger
